Attempting mobile dropdown spacing fix

--- a/navbar_and_footer_styles.css
+++ b/navbar_and_footer_styles.css
@@ -94,11 +94,10 @@ Navbar
 .drop_button {
     font-family: 'Baloo 2';
     font-size: 1.75rem;
-    margin: 0 auto;
+    padding-top: 25%;
 
     background-color: #6767e0;
     color: white;
-    padding-top: 20%;
 
     border: none;
 
@@ -122,15 +121,12 @@ dropdown
 
 @media (max-width: 800px) {
     .dropdown {
-        position: relative;
         display: inline-block;
     }
 }
 .dropdown-content {
     display: none;
-    position: absolute;
-    float: right;
-    margin-top: -46%;
+    top: 100%;
     background-color: #6767e0;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -146,9 +142,10 @@ Footer
     left: 0px;
     bottom: 0px;
 
-    padding-top: 0.6rem;
+    padding-top: 0.3rem;
     padding-bottom: 0.3rem;
     width: 100%;
+    height: 3rem;
 
     background: #444460;
     color: white;
